--- a/kernel_installer_gui/locale/de/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/de/LC_MESSAGES/kernel-installer.po
@@ -5,396 +5,303 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
 
-#: kernel_installer_gui/widgets/profile_selector.py:68
-msgid "Select kernel profile"
-msgstr "Kernel-Profil auswählen"
-
-#: kernel_installer_gui/widgets/version_picker.py:33
-msgid "Kernel version"
-msgstr "Kernel-Version"
-
-#: kernel_installer_gui/widgets/version_picker.py:51
-msgid "Check for updates"
-msgstr "Auf Updates prüfen"
-
-#: kernel_installer_gui/widgets/version_picker.py:93
-msgid "<span foreground='orange'>⚠ Experimental version (RC)</span>"
-msgstr "<span foreground='orange'>⚠ Experimentelle Version (RC)</span>"
-
-#: kernel_installer_gui/widgets/version_picker.py:95
-msgid "<b>✓ Latest stable version</b>"
-msgstr "<b>✓ Neueste stabile Version</b>"
-
-#: kernel_installer_gui/widgets/version_picker.py:97
-msgid "Long-term support version (LTS)"
-msgstr "Langzeit-Support-Version (LTS)"
-
-#: kernel_installer_gui/widgets/version_picker.py:99
-msgid "Stable version"
-msgstr "Stabile Version"
-
-#: kernel_installer_gui/widgets/version_picker.py:130
-msgid " (RC - Experimental)"
-msgstr " (RC - Experimentell)"
-
-#: kernel_installer_gui/widgets/version_picker.py:132
-msgid " (Latest)"
-msgstr " (Neueste)"
-
-#: kernel_installer_gui/widgets/version_picker.py:134
-msgid " (LTS)"
-msgstr " (LTS)"
-
-#: kernel_installer_gui/widgets/build_progress.py:62
-msgid "SYSTEM LOAD"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:84
-msgid "Load average:"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:101
-#, python-format
-msgid "Cores: %d"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:117
-msgid "Ready to build"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:181
-#, python-format
-msgid "Time: %(h)02d:%(m)02d:%(s)02d"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:220
-msgid "Build completed successfully!"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:224
-msgid "Build failed"
-msgstr ""
-
-#: kernel_installer_gui/widgets/history_view.py:25
-msgid "📜 Installed kernels history"
-msgstr "📜 Verlauf der installierten Kernel"
-
-#: kernel_installer_gui/widgets/history_view.py:54
-msgid "No kernels installed yet"
-msgstr "Noch keine Kernel installiert"
-
-#: kernel_installer_gui/widgets/history_view.py:79
-msgid "Current kernel"
-msgstr "Aktueller Kernel"
-
-#: kernel_installer_gui/core/distro.py:363
-#: kernel_installer_gui/core/distro.py:365
-#: kernel_installer_gui/core/distro.py:374
-#: kernel_installer_gui/core/distro.py:376
-msgid "Unknown"
-msgstr "Unbekannt"
-
-#: kernel_installer_gui/core/profiles.py:81
 msgid "Gaming"
 msgstr "Gaming"
 
-#: kernel_installer_gui/core/profiles.py:130
+msgid "Optimized for games with low input latency, high CPU performance and better GPU management. Ideal for gamers and streaming."
+msgstr "Optimiert für Spiele mit niedriger Eingabelatenz, hoher CPU-Leistung und besserem GPU-Management. Ideal für Gamer und Streaming."
+
 msgid "Audio/Video"
 msgstr "Audio/Video"
 
-#: kernel_installer_gui/core/profiles.py:179
+msgid "Low-latency kernel for audio and video production. Optimized for DAWs, video editing and professional streaming. Uses real-time preemption for ultra-low latency."
+msgstr "Low-Latency-Kernel für die Audio- und Videoproduktion. Optimiert für DAWs, Videobearbeitung und professionelles Streaming. Verwendet Echtzeit-Preemption für extrem niedrige Latenz."
+
 msgid "Minimal / Office"
 msgstr "Minimal / Büro"
 
-#: kernel_installer_gui/core/notifications.py:65
-msgid "New kernel version available"
-msgstr ""
+msgid "Lightweight kernel for office work, web browsing and general use. No unnecessary modules, low resource consumption. Ideal for older hardware or virtual machines."
+msgstr "Leichtgewichtiger Kernel für Büroarbeit, Web-Browsing und allgemeine Nutzung. Keine unnötigen Module, geringer Ressourcenverbrauch. Ideal für ältere Hardware oder virtuelle Maschinen."
 
-#: kernel_installer_gui/core/notifications.py:66
-#, python-format
-msgid "Linux %(version)s is available for download."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:74
-msgid "Download complete"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:75
-#, python-format
-msgid "Linux %(version)s has been downloaded successfully."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:84
-msgid "Build complete"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:85
-#, python-format
-msgid "Linux %(version)s has been compiled and installed successfully."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:91
-#: kernel_installer_gui/core/kernel.py:319
-msgid "Build error"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:92
-#, python-format
-msgid "Compilation of Linux %(version)s has failed."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:100
-msgid "Reboot required"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:101
-msgid "Reboot the system to use the new kernel."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:184
-#, python-format
-msgid "Preparing download for Linux %(version)s..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:188
-msgid "Error: Could not create build directory"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:195
-#, python-format
-msgid "Downloading linux-%(version)s.tar.xz..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:202
-#, python-format
-msgid "Download error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:205
-msgid "Download complete. Extracting..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:212
-#, python-format
-msgid "Extraction error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:215
-msgid "Extraction complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:233
-msgid "Copying current kernel configuration..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:244
-#, python-format
-msgid "Applying profile: %(profile)s..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:250
-#, python-format
-msgid "Warning applying profile: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:259
-msgid "Running make oldconfig..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:265
-msgid "Configuration complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:281
-#, python-format
-msgid "Compiling kernel with %(cores)d cores..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:302
-msgid "Generating .deb packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:306
-msgid "Generating RPM packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:310
-msgid "Compiling for direct installation..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:324
-msgid "Compiling modules..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:328
-msgid "Error compiling modules"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:331
-msgid "Build complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:345
-#: kernel_installer_gui/core/kernel.py:387
-msgid "Installing kernel..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:354
-msgid "Installing .deb packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:359
-#, python-format
-msgid "Installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:368
-msgid "Installing RPM packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:374
-#, python-format
-msgid "RPM installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:379
-msgid "Installing modules..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:384
-#, python-format
-msgid "Module installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:392
-#, python-format
-msgid "Kernel installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:396
-msgid "Regenerating initramfs..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:401
-msgid "Warning: Error regenerating initramfs"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:404
-msgid "Updating bootloader..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:409
-msgid "Warning: Error updating bootloader"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:414
-#: kernel_installer_gui/app/main_window.py:374
-msgid "Installation complete!"
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:273
-#: kernel_installer_gui/app/main_window.py:51
 msgid "Kernel Installer"
 msgstr "Kernel-Installer"
 
-#: kernel_installer_gui/app/application.py:298
-msgid "Clean build files?"
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:310
-msgid "Build files deleted."
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:312
-msgid "Error cleaning files."
-msgstr ""
-
-#: kernel_installer_gui/app/main_window.py:52
 msgid "by Sergi Perich & Alexia Michelle"
 msgstr "von Sergi Perich & Alexia Michelle"
 
-#: kernel_installer_gui/app/main_window.py:63
-msgid "Refresh versions (F5)"
-msgstr "Versionen aktualisieren (F5)"
+msgid "Select kernel profile"
+msgstr "Kernel-Profil auswählen"
 
-#: kernel_installer_gui/app/main_window.py:64
-msgid "Clean build files"
-msgstr "Build-Dateien bereinigen"
+msgid "Kernel version"
+msgstr "Kernel-Version"
 
-#: kernel_installer_gui/app/main_window.py:65
-msgid "About"
-msgstr "Über"
+msgid "Check for updates"
+msgstr "Auf Updates prüfen"
 
-#: kernel_installer_gui/app/main_window.py:66
-msgid "Quit (Ctrl+Q)"
-msgstr "Beenden (Strg+Q)"
+msgid "<b>✓ Latest stable version</b>"
+msgstr "<b>✓ Neueste stabile Version</b>"
 
-#: kernel_installer_gui/app/main_window.py:103
+msgid "Long-term support version (LTS)"
+msgstr "Langzeit-Support-Version (LTS)"
+
+msgid "Stable version"
+msgstr "Stabile Version"
+
+msgid "<span foreground='orange'>⚠ Experimental version (RC)</span>"
+msgstr "<span foreground='orange'>⚠ Experimentelle Version (RC)</span>"
+
+msgid " (RC - Experimental)"
+msgstr " (RC - Experimentell)"
+
+msgid " (Latest)"
+msgstr " (Neueste)"
+
+msgid " (LTS)"
+msgstr " (LTS)"
+
 msgid "Kernel name (suffix)"
 msgstr "Kernel-Name (Suffix)"
 
-#: kernel_installer_gui/app/main_window.py:111
 msgid "E.g.: gaming, server, my-kernel"
 msgstr "Z.B.: Gaming, Server, mein-kernel"
 
-#: kernel_installer_gui/app/main_window.py:112
 msgid "This name will be added to the kernel, e.g.: 6.18.7-custom-gaming"
 msgstr "Dieser Name wird dem Kernel hinzugefügt, z.B.: 6.18.7-custom-gaming"
 
-#: kernel_installer_gui/app/main_window.py:117
 msgid "Result: 6.x.x-custom-gaming (combined with profile)"
 msgstr "Ergebnis: 6.x.x-custom-gaming (kombiniert mit Profil)"
 
-#: kernel_installer_gui/app/main_window.py:136
+msgid "Result: %s"
+msgstr "Ergebnis: %s"
+
 msgid "Distribution:"
 msgstr "Distribution:"
 
-#: kernel_installer_gui/app/main_window.py:141
 msgid "Detecting..."
 msgstr "Erkennen..."
 
-#: kernel_installer_gui/app/main_window.py:148
 msgid "Current kernel:"
 msgstr "Aktueller Kernel:"
 
-#: kernel_installer_gui/app/main_window.py:165
 msgid "Bootloader:"
 msgstr "Bootloader:"
 
-#: kernel_installer_gui/app/main_window.py:177
 msgid "Initramfs:"
 msgstr "Initramfs:"
 
-#: kernel_installer_gui/app/main_window.py:190
 msgid "📥 Download and install kernel"
 msgstr "📥 Kernel herunterladen und installieren"
 
-#: kernel_installer_gui/app/main_window.py:212
+msgid "📜 Installed kernels history"
+msgstr "📜 Verlauf der installierten Kernel"
+
+msgid "No kernels installed yet"
+msgstr "Noch keine Kernel installiert"
+
+msgid "Current kernel"
+msgstr "Aktueller Kernel"
+
+msgid "SYSTEM LOAD"
+msgstr "SYSTEMLAST"
+
+msgid "Load average:"
+msgstr "Lastdurchschnitt:"
+
+msgid "Cores: %d"
+msgstr "Kerne: %d"
+
+msgid "Ready to build"
+msgstr "Bereit zum Bauen"
+
+msgid "Time: %(h)02d:%(m)02d:%(s)02d"
+msgstr "Zeit: %(h)02d:%(m)02d:%(s)02d"
+
+msgid "Build completed successfully!"
+msgstr "Build erfolgreich abgeschlossen!"
+
+msgid "Build failed"
+msgstr "Build fehlgeschlagen"
+
 msgid "Cancel"
 msgstr "Abbrechen"
 
-#: kernel_installer_gui/app/main_window.py:218
 msgid "Done"
 msgstr "Fertig"
 
-#: kernel_installer_gui/app/main_window.py:262
-msgid "Unsupported distribution"
-msgstr ""
+msgid "Preparing download for Linux %(version)s..."
+msgstr "Download für Linux %(version)s wird vorbereitet..."
 
-#: kernel_installer_gui/app/main_window.py:277
-msgid "Please select a kernel version."
-msgstr ""
+msgid "Error: Could not create build directory"
+msgstr "Fehler: Build-Verzeichnis konnte nicht erstellt werden"
 
-#: kernel_installer_gui/app/main_window.py:312
-msgid "Install kernel?"
-msgstr ""
+msgid "Downloading linux-%(version)s.tar.xz..."
+msgstr "Download von linux-%(version)s.tar.xz..."
 
-#: kernel_installer_gui/app/main_window.py:395
+msgid "Download error: %(error)s"
+msgstr "Download-Fehler: %(error)s"
+
+msgid "Download complete. Extracting..."
+msgstr "Download abgeschlossen. Entpacken..."
+
+msgid "Extraction error: %(error)s"
+msgstr "Fehler beim Entpacken: %(error)s"
+
+msgid "Extraction complete."
+msgstr "Entpacken abgeschlossen."
+
+msgid "Copying current kernel configuration..."
+msgstr "Aktuelle Kernel-Konfiguration wird kopiert..."
+
+msgid "Applying profile: %(profile)s..."
+msgstr "Profil wird angewendet: %(profile)s..."
+
+msgid "Warning applying profile: %(error)s"
+msgstr "Warnung beim Anwenden des Profils: %(error)s"
+
+msgid "Running make oldconfig..."
+msgstr "make oldconfig wird ausgeführt..."
+
+msgid "Configuration complete."
+msgstr "Konfiguration abgeschlossen."
+
+msgid "Compiling kernel with %(cores)d cores..."
+msgstr "Kernel wird mit %(cores)d Kernen kompiliert..."
+
+msgid "Generating .deb packages..."
+msgstr "Abhängigkeiten (.deb) werden generiert..."
+
+msgid "Generating RPM packages..."
+msgstr "Abhängigkeiten (RPM) werden generiert..."
+
+msgid "Compiling for direct installation..."
+msgstr "Kompilierung für direkte Installation..."
+
+msgid "Compiling modules..."
+msgstr "Module werden kompiliert..."
+
+msgid "Error compiling modules"
+msgstr "Fehler beim Kompilieren der Module"
+
+msgid "Build complete."
+msgstr "Build abgeschlossen."
+
+msgid "Installing kernel..."
+msgstr "Kernel wird installiert..."
+
+msgid "Installing .deb packages..."
+msgstr "deb-Pakete werden installiert..."
+
+msgid "Installation error: %(error)s"
+msgstr "Installationsfehler: %(error)s"
+
+msgid "Installing RPM packages..."
+msgstr "RPM-Pakete werden installiert..."
+
+msgid "RPM installation error: %(error)s"
+msgstr "RPM-Installationsfehler: %(error)s"
+
+msgid "Installing modules..."
+msgstr "Module werden installiert..."
+
+msgid "Module installation error: %(error)s"
+msgstr "Fehler bei der Modulinstallation: %(error)s"
+
+msgid "Kernel installation error: %(error)s"
+msgstr "Kernel-Installationsfehler: %(error)s"
+
+msgid "Regenerating initramfs..."
+msgstr "initramfs wird neu generiert..."
+
+msgid "Warning: Error regenerating initramfs"
+msgstr "Warnung: Fehler beim Regenerieren von initramfs"
+
+msgid "Updating bootloader..."
+msgstr "Bootloader wird aktualisiert..."
+
+msgid "Warning: Error updating bootloader"
+msgstr "Warnung: Fehler beim Aktualisieren des Bootloaders"
+
+msgid "Installation complete!"
+msgstr "Installation abgeschlossen!"
+
+msgid "The kernel has been installed successfully.\n\nDo you want to reboot now to use the new kernel?"
+msgstr "Der Kernel wurde erfolgreich installiert.\n\nMöchten Sie jetzt neu starten, um den neuen Kernel zu verwenden?"
+
+msgid "New kernel version available"
+msgstr "Neue Kernel-Version verfügbar"
+
+msgid "Linux %(version)s is available for download."
+msgstr "Linux %(version)s steht zum Download bereit."
+
+msgid "Download complete"
+msgstr "Download abgeschlossen"
+
+msgid "Linux %(version)s has been downloaded successfully."
+msgstr "Linux %(version)s wurde erfolgreich heruntergeladen."
+
+msgid "Build complete"
+msgstr "Build abgeschlossen"
+
+msgid "Linux %(version)s has been compiled and installed successfully."
+msgstr "Linux %(version)s wurde erfolgreich kompiliert und installiert."
+
+msgid "Build error"
+msgstr "Build-Fehler"
+
+msgid "Compilation of Linux %(version)s has failed."
+msgstr "Das Kompilieren von Linux %(version)s ist fehlgeschlagen."
+
+msgid "Reboot required"
+msgstr "Neustart erforderlich"
+
+msgid "Reboot the system to use the new kernel."
+msgstr "Starten Sie das System neu, um den neuen Kernel zu verwenden."
+
+msgid "Refresh versions (F5)"
+msgstr "Versionen aktualisieren (F5)"
+
+msgid "Clean build files"
+msgstr "Build-Dateien bereinigen"
+
+msgid "About"
+msgstr "Über"
+
+msgid "Quit (Ctrl+Q)"
+msgstr "Beenden (Strg+Q)"
+
+msgid "A graphical interface for downloading, compiling and installing the Linux kernel with optimized profiles."
+msgstr "Eine grafische Oberfläche zum Herunterladen, Kompilieren und Installieren des Linux-Kernels mit optimierten Profilen."
+
+msgid "Clean build files?"
+msgstr "Build-Dateien bereinigen?"
+
+msgid "All temporary files in ~/kernel_build will be deleted.\nThis will free up disk space."
+msgstr "Alle temporären Dateien in ~/kernel_build werden gelöscht.\nDies wird Festplattenspeicher freigeben."
+
+msgid "Build files deleted."
+msgstr "Build-Dateien gelöscht."
+
+msgid "Error cleaning files."
+msgstr "Fehler beim Bereinigen der Dateien."
+
 msgid "Error"
-msgstr ""
+msgstr "Fehler"
 
-#: kernel_installer_gui/app/main_window.py:421
-#, python-format
-msgid "Result: %s"
-msgstr "Ergebnis: %s"
+msgid "Unsupported distribution"
+msgstr "Nicht unterstützte Distribution"
+
+msgid "%(distro)s is not officially supported. The program might not work correctly."
+msgstr "%(distro)s wird nicht oficialmente unterstützt. Das Programm fuktioniert possibly nicht ordnungsgemäß."
+
+msgid "Please select a kernel version."
+msgstr "Bitte wählen Sie eine Kernel-Version aus."
+
+msgid "Install kernel?"
+msgstr "Kernel installieren?"
+
+msgid "You are about to download, compile and install:\n\n• Version: Linux %(version)s\n• Profile: %(profile)s\n\nThis process may take several hours."
+msgstr "Sie sind im Begriff, herunterzuladen, zu kompilieren und zu installieren:\n\n• Version: Linux %(version)s\n• Profil: %(profile)s\n\nDieser Vorgang kann mehrere Stunden dauern."
+
+msgid "Unknown"
+msgstr "Unbekannt"
 
