--- a/kernel_installer_gui/locale/en/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/en/LC_MESSAGES/kernel-installer.po
@@ -5,396 +5,303 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
 
-#: kernel_installer_gui/widgets/profile_selector.py:68
-msgid "Select kernel profile"
-msgstr "Select kernel profile"
-
-#: kernel_installer_gui/widgets/version_picker.py:33
-msgid "Kernel version"
-msgstr "Kernel version"
-
-#: kernel_installer_gui/widgets/version_picker.py:51
-msgid "Check for updates"
-msgstr "Check for updates"
-
-#: kernel_installer_gui/widgets/version_picker.py:93
-msgid "<span foreground='orange'>⚠ Experimental version (RC)</span>"
-msgstr "<span foreground='orange'>⚠ Experimental version (RC)</span>"
-
-#: kernel_installer_gui/widgets/version_picker.py:95
-msgid "<b>✓ Latest stable version</b>"
-msgstr "<b>✓ Latest stable version</b>"
-
-#: kernel_installer_gui/widgets/version_picker.py:97
-msgid "Long-term support version (LTS)"
-msgstr "Long-term support version (LTS)"
-
-#: kernel_installer_gui/widgets/version_picker.py:99
-msgid "Stable version"
-msgstr "Stable version"
-
-#: kernel_installer_gui/widgets/version_picker.py:130
-msgid " (RC - Experimental)"
-msgstr " (RC - Experimental)"
-
-#: kernel_installer_gui/widgets/version_picker.py:132
-msgid " (Latest)"
-msgstr " (Latest)"
-
-#: kernel_installer_gui/widgets/version_picker.py:134
-msgid " (LTS)"
-msgstr " (LTS)"
-
-#: kernel_installer_gui/widgets/build_progress.py:62
-msgid "SYSTEM LOAD"
-msgstr "SYSTEM LOAD"
-
-#: kernel_installer_gui/widgets/build_progress.py:84
-msgid "Load average:"
-msgstr "Load average:"
-
-#: kernel_installer_gui/widgets/build_progress.py:101
-#, python-format
-msgid "Cores: %d"
-msgstr "Cores: %d"
-
-#: kernel_installer_gui/widgets/build_progress.py:117
-msgid "Ready to build"
-msgstr "Ready to build"
-
-#: kernel_installer_gui/widgets/build_progress.py:181
-#, python-format
-msgid "Time: %(h)02d:%(m)02d:%(s)02d"
-msgstr "Time: %(h)02d:%(m)02d:%(s)02d"
-
-#: kernel_installer_gui/widgets/build_progress.py:220
-msgid "Build completed successfully!"
-msgstr "Build completed successfully!"
-
-#: kernel_installer_gui/widgets/build_progress.py:224
-msgid "Build failed"
-msgstr "Build failed"
-
-#: kernel_installer_gui/widgets/history_view.py:25
-msgid "📜 Installed kernels history"
-msgstr "📜 Installed kernels history"
-
-#: kernel_installer_gui/widgets/history_view.py:54
-msgid "No kernels installed yet"
-msgstr "No kernels installed yet"
-
-#: kernel_installer_gui/widgets/history_view.py:79
-msgid "Current kernel"
-msgstr "Current kernel"
-
-#: kernel_installer_gui/core/distro.py:363
-#: kernel_installer_gui/core/distro.py:365
-#: kernel_installer_gui/core/distro.py:374
-#: kernel_installer_gui/core/distro.py:376
-msgid "Unknown"
-msgstr "Unknown"
-
-#: kernel_installer_gui/core/profiles.py:81
 msgid "Gaming"
 msgstr "Gaming"
 
-#: kernel_installer_gui/core/profiles.py:130
+msgid "Optimized for games with low input latency, high CPU performance and better GPU management. Ideal for gamers and streaming."
+msgstr "Optimized for games with low input latency, high CPU performance and better GPU management. Ideal for gamers and streaming."
+
 msgid "Audio/Video"
 msgstr "Audio/Video"
 
-#: kernel_installer_gui/core/profiles.py:179
+msgid "Low-latency kernel for audio and video production. Optimized for DAWs, video editing and professional streaming. Uses real-time preemption for ultra-low latency."
+msgstr "Low-latency kernel for audio and video production. Optimized for DAWs, video editing and professional streaming. Uses real-time preemption for ultra-low latency."
+
 msgid "Minimal / Office"
 msgstr "Minimal / Office"
 
-#: kernel_installer_gui/core/notifications.py:65
-msgid "New kernel version available"
-msgstr "New kernel version available"
+msgid "Lightweight kernel for office work, web browsing and general use. No unnecessary modules, low resource consumption. Ideal for older hardware or virtual machines."
+msgstr "Lightweight kernel for office work, web browsing and general use. No unnecessary modules, low resource consumption. Ideal for older hardware or virtual machines."
 
-#: kernel_installer_gui/core/notifications.py:66
-#, python-format
-msgid "Linux %(version)s is available for download."
-msgstr "Linux %(version)s is available for download."
-
-#: kernel_installer_gui/core/notifications.py:74
-msgid "Download complete"
-msgstr "Download complete"
-
-#: kernel_installer_gui/core/notifications.py:75
-#, python-format
-msgid "Linux %(version)s has been downloaded successfully."
-msgstr "Linux %(version)s has been downloaded successfully."
-
-#: kernel_installer_gui/core/notifications.py:84
-msgid "Build complete"
-msgstr "Build complete"
-
-#: kernel_installer_gui/core/notifications.py:85
-#, python-format
-msgid "Linux %(version)s has been compiled and installed successfully."
-msgstr "Linux %(version)s has been compiled and installed successfully."
-
-#: kernel_installer_gui/core/notifications.py:91
-#: kernel_installer_gui/core/kernel.py:319
-msgid "Build error"
-msgstr "Build error"
-
-#: kernel_installer_gui/core/notifications.py:92
-#, python-format
-msgid "Compilation of Linux %(version)s has failed."
-msgstr "Compilation of Linux %(version)s has failed."
-
-#: kernel_installer_gui/core/notifications.py:100
-msgid "Reboot required"
-msgstr "Reboot required"
-
-#: kernel_installer_gui/core/notifications.py:101
-msgid "Reboot the system to use the new kernel."
-msgstr "Reboot the system to use the new kernel."
-
-#: kernel_installer_gui/core/kernel.py:184
-#, python-format
-msgid "Preparing download for Linux %(version)s..."
-msgstr "Preparing download for Linux %(version)s..."
-
-#: kernel_installer_gui/core/kernel.py:188
-msgid "Error: Could not create build directory"
-msgstr "Error: Could not create build directory"
-
-#: kernel_installer_gui/core/kernel.py:195
-#, python-format
-msgid "Downloading linux-%(version)s.tar.xz..."
-msgstr "Downloading linux-%(version)s.tar.xz..."
-
-#: kernel_installer_gui/core/kernel.py:202
-#, python-format
-msgid "Download error: %(error)s"
-msgstr "Download error: %(error)s"
-
-#: kernel_installer_gui/core/kernel.py:205
-msgid "Download complete. Extracting..."
-msgstr "Download complete. Extracting..."
-
-#: kernel_installer_gui/core/kernel.py:212
-#, python-format
-msgid "Extraction error: %(error)s"
-msgstr "Extraction error: %(error)s"
-
-#: kernel_installer_gui/core/kernel.py:215
-msgid "Extraction complete."
-msgstr "Extraction complete."
-
-#: kernel_installer_gui/core/kernel.py:233
-msgid "Copying current kernel configuration..."
-msgstr "Copying current kernel configuration..."
-
-#: kernel_installer_gui/core/kernel.py:244
-#, python-format
-msgid "Applying profile: %(profile)s..."
-msgstr "Applying profile: %(profile)s..."
-
-#: kernel_installer_gui/core/kernel.py:250
-#, python-format
-msgid "Warning applying profile: %(error)s"
-msgstr "Warning applying profile: %(error)s"
-
-#: kernel_installer_gui/core/kernel.py:259
-msgid "Running make oldconfig..."
-msgstr "Running make oldconfig..."
-
-#: kernel_installer_gui/core/kernel.py:265
-msgid "Configuration complete."
-msgstr "Configuration complete."
-
-#: kernel_installer_gui/core/kernel.py:281
-#, python-format
-msgid "Compiling kernel with %(cores)d cores..."
-msgstr "Compiling kernel with %(cores)d cores..."
-
-#: kernel_installer_gui/core/kernel.py:302
-msgid "Generating .deb packages..."
-msgstr "Generating .deb packages..."
-
-#: kernel_installer_gui/core/kernel.py:306
-msgid "Generating RPM packages..."
-msgstr "Generating RPM packages..."
-
-#: kernel_installer_gui/core/kernel.py:310
-msgid "Compiling for direct installation..."
-msgstr "Compiling for direct installation..."
-
-#: kernel_installer_gui/core/kernel.py:324
-msgid "Compiling modules..."
-msgstr "Compiling modules..."
-
-#: kernel_installer_gui/core/kernel.py:328
-msgid "Error compiling modules"
-msgstr "Error compiling modules"
-
-#: kernel_installer_gui/core/kernel.py:331
-msgid "Build complete."
-msgstr "Build complete."
-
-#: kernel_installer_gui/core/kernel.py:345
-#: kernel_installer_gui/core/kernel.py:387
-msgid "Installing kernel..."
-msgstr "Installing kernel..."
-
-#: kernel_installer_gui/core/kernel.py:354
-msgid "Installing .deb packages..."
-msgstr "Installing .deb packages..."
-
-#: kernel_installer_gui/core/kernel.py:359
-#, python-format
-msgid "Installation error: %(error)s"
-msgstr "Installation error: %(error)s"
-
-#: kernel_installer_gui/core/kernel.py:368
-msgid "Installing RPM packages..."
-msgstr "Installing RPM packages..."
-
-#: kernel_installer_gui/core/kernel.py:374
-#, python-format
-msgid "RPM installation error: %(error)s"
-msgstr "RPM installation error: %(error)s"
-
-#: kernel_installer_gui/core/kernel.py:379
-msgid "Installing modules..."
-msgstr "Installing modules..."
-
-#: kernel_installer_gui/core/kernel.py:384
-#, python-format
-msgid "Module installation error: %(error)s"
-msgstr "Module installation error: %(error)s"
-
-#: kernel_installer_gui/core/kernel.py:392
-#, python-format
-msgid "Kernel installation error: %(error)s"
-msgstr "Kernel installation error: %(error)s"
-
-#: kernel_installer_gui/core/kernel.py:396
-msgid "Regenerating initramfs..."
-msgstr "Regenerating initramfs..."
-
-#: kernel_installer_gui/core/kernel.py:401
-msgid "Warning: Error regenerating initramfs"
-msgstr "Warning: Error regenerating initramfs"
-
-#: kernel_installer_gui/core/kernel.py:404
-msgid "Updating bootloader..."
-msgstr "Updating bootloader..."
-
-#: kernel_installer_gui/core/kernel.py:409
-msgid "Warning: Error updating bootloader"
-msgstr "Warning: Error updating bootloader"
-
-#: kernel_installer_gui/core/kernel.py:414
-#: kernel_installer_gui/app/main_window.py:374
-msgid "Installation complete!"
-msgstr "Installation complete!"
-
-#: kernel_installer_gui/app/application.py:273
-#: kernel_installer_gui/app/main_window.py:51
 msgid "Kernel Installer"
 msgstr "Kernel Installer"
 
-#: kernel_installer_gui/app/application.py:298
-msgid "Clean build files?"
-msgstr "Clean build files?"
-
-#: kernel_installer_gui/app/application.py:310
-msgid "Build files deleted."
-msgstr "Build files deleted."
-
-#: kernel_installer_gui/app/application.py:312
-msgid "Error cleaning files."
-msgstr "Error cleaning files."
-
-#: kernel_installer_gui/app/main_window.py:52
 msgid "by Sergi Perich & Alexia Michelle"
 msgstr "by Sergi Perich & Alexia Michelle"
 
-#: kernel_installer_gui/app/main_window.py:63
-msgid "Refresh versions (F5)"
-msgstr "Refresh versions (F5)"
+msgid "Select kernel profile"
+msgstr "Select kernel profile"
 
-#: kernel_installer_gui/app/main_window.py:64
-msgid "Clean build files"
-msgstr "Clean build files"
+msgid "Kernel version"
+msgstr "Kernel version"
 
-#: kernel_installer_gui/app/main_window.py:65
-msgid "About"
-msgstr "About"
+msgid "Check for updates"
+msgstr "Check for updates"
 
-#: kernel_installer_gui/app/main_window.py:66
-msgid "Quit (Ctrl+Q)"
-msgstr "Quit (Ctrl+Q)"
+msgid "<b>✓ Latest stable version</b>"
+msgstr "<b>✓ Latest stable version</b>"
 
-#: kernel_installer_gui/app/main_window.py:103
+msgid "Long-term support version (LTS)"
+msgstr "Long-term support version (LTS)"
+
+msgid "Stable version"
+msgstr "Stable version"
+
+msgid "<span foreground='orange'>⚠ Experimental version (RC)</span>"
+msgstr "<span foreground='orange'>⚠ Experimental version (RC)</span>"
+
+msgid " (RC - Experimental)"
+msgstr " (RC - Experimental)"
+
+msgid " (Latest)"
+msgstr " (Latest)"
+
+msgid " (LTS)"
+msgstr " (LTS)"
+
 msgid "Kernel name (suffix)"
 msgstr "Kernel name (suffix)"
 
-#: kernel_installer_gui/app/main_window.py:111
 msgid "E.g.: gaming, server, my-kernel"
 msgstr "E.g.: gaming, server, my-kernel"
 
-#: kernel_installer_gui/app/main_window.py:112
 msgid "This name will be added to the kernel, e.g.: 6.18.7-custom-gaming"
 msgstr "This name will be added to the kernel, e.g.: 6.18.7-custom-gaming"
 
-#: kernel_installer_gui/app/main_window.py:117
 msgid "Result: 6.x.x-custom-gaming (combined with profile)"
 msgstr "Result: 6.x.x-custom-gaming (combined with profile)"
 
-#: kernel_installer_gui/app/main_window.py:136
+msgid "Result: %s"
+msgstr "Result: %s"
+
 msgid "Distribution:"
 msgstr "Distribution:"
 
-#: kernel_installer_gui/app/main_window.py:141
 msgid "Detecting..."
 msgstr "Detecting..."
 
-#: kernel_installer_gui/app/main_window.py:148
 msgid "Current kernel:"
 msgstr "Current kernel:"
 
-#: kernel_installer_gui/app/main_window.py:165
 msgid "Bootloader:"
 msgstr "Bootloader:"
 
-#: kernel_installer_gui/app/main_window.py:177
 msgid "Initramfs:"
 msgstr "Initramfs:"
 
-#: kernel_installer_gui/app/main_window.py:190
 msgid "📥 Download and install kernel"
 msgstr "📥 Download and install kernel"
 
-#: kernel_installer_gui/app/main_window.py:212
+msgid "📜 Installed kernels history"
+msgstr "📜 Installed kernels history"
+
+msgid "No kernels installed yet"
+msgstr "No kernels installed yet"
+
+msgid "Current kernel"
+msgstr "Current kernel"
+
+msgid "SYSTEM LOAD"
+msgstr "SYSTEM LOAD"
+
+msgid "Load average:"
+msgstr "Load average:"
+
+msgid "Cores: %d"
+msgstr "Cores: %d"
+
+msgid "Ready to build"
+msgstr "Ready to build"
+
+msgid "Time: %(h)02d:%(m)02d:%(s)02d"
+msgstr "Time: %(h)02d:%(m)02d:%(s)02d"
+
+msgid "Build completed successfully!"
+msgstr "Build completed successfully!"
+
+msgid "Build failed"
+msgstr "Build failed"
+
 msgid "Cancel"
 msgstr "Cancel"
 
-#: kernel_installer_gui/app/main_window.py:218
 msgid "Done"
 msgstr "Done"
 
-#: kernel_installer_gui/app/main_window.py:262
-msgid "Unsupported distribution"
-msgstr "Unsupported distribution"
+msgid "Preparing download for Linux %(version)s..."
+msgstr "Preparing download for Linux %(version)s..."
 
-#: kernel_installer_gui/app/main_window.py:277
-msgid "Please select a kernel version."
-msgstr "Please select a kernel version."
+msgid "Error: Could not create build directory"
+msgstr "Error: Could not create build directory"
 
-#: kernel_installer_gui/app/main_window.py:312
-msgid "Install kernel?"
-msgstr "Install kernel?"
+msgid "Downloading linux-%(version)s.tar.xz..."
+msgstr "Downloading linux-%(version)s.tar.xz..."
 
-#: kernel_installer_gui/app/main_window.py:395
+msgid "Download error: %(error)s"
+msgstr "Download error: %(error)s"
+
+msgid "Download complete. Extracting..."
+msgstr "Download complete. Extracting..."
+
+msgid "Extraction error: %(error)s"
+msgstr "Extraction error: %(error)s"
+
+msgid "Extraction complete."
+msgstr "Extraction complete."
+
+msgid "Copying current kernel configuration..."
+msgstr "Copying current kernel configuration..."
+
+msgid "Applying profile: %(profile)s..."
+msgstr "Applying profile: %(profile)s..."
+
+msgid "Warning applying profile: %(error)s"
+msgstr "Warning applying profile: %(error)s"
+
+msgid "Running make oldconfig..."
+msgstr "Running make oldconfig..."
+
+msgid "Configuration complete."
+msgstr "Configuration complete."
+
+msgid "Compiling kernel with %(cores)d cores..."
+msgstr "Compiling kernel with %(cores)d cores..."
+
+msgid "Generating .deb packages..."
+msgstr "Generating .deb packages..."
+
+msgid "Generating RPM packages..."
+msgstr "Generating RPM packages..."
+
+msgid "Compiling for direct installation..."
+msgstr "Compiling for direct installation..."
+
+msgid "Compiling modules..."
+msgstr "Compiling modules..."
+
+msgid "Error compiling modules"
+msgstr "Error compiling modules"
+
+msgid "Build complete."
+msgstr "Build complete."
+
+msgid "Installing kernel..."
+msgstr "Installing kernel..."
+
+msgid "Installing .deb packages..."
+msgstr "Installing .deb packages..."
+
+msgid "Installation error: %(error)s"
+msgstr "Installation error: %(error)s"
+
+msgid "Installing RPM packages..."
+msgstr "Installing RPM packages..."
+
+msgid "RPM installation error: %(error)s"
+msgstr "RPM installation error: %(error)s"
+
+msgid "Installing modules..."
+msgstr "Installing modules..."
+
+msgid "Module installation error: %(error)s"
+msgstr "Module installation error: %(error)s"
+
+msgid "Kernel installation error: %(error)s"
+msgstr "Kernel installation error: %(error)s"
+
+msgid "Regenerating initramfs..."
+msgstr "Regenerating initramfs..."
+
+msgid "Warning: Error regenerating initramfs"
+msgstr "Warning: Error regenerating initramfs"
+
+msgid "Updating bootloader..."
+msgstr "Updating bootloader..."
+
+msgid "Warning: Error updating bootloader"
+msgstr "Warning: Error updating bootloader"
+
+msgid "Installation complete!"
+msgstr "Installation complete!"
+
+msgid "The kernel has been installed successfully.\n\nDo you want to reboot now to use the new kernel?"
+msgstr "The kernel has been installed successfully.\n\nDo you want to reboot now to use the new kernel?"
+
+msgid "New kernel version available"
+msgstr "New kernel version available"
+
+msgid "Linux %(version)s is available for download."
+msgstr "Linux %(version)s is available for download."
+
+msgid "Download complete"
+msgstr "Download complete"
+
+msgid "Linux %(version)s has been downloaded successfully."
+msgstr "Linux %(version)s has been downloaded successfully."
+
+msgid "Build complete"
+msgstr "Build complete"
+
+msgid "Linux %(version)s has been compiled and installed successfully."
+msgstr "Linux %(version)s has been compiled and installed successfully."
+
+msgid "Build error"
+msgstr "Build error"
+
+msgid "Compilation of Linux %(version)s has failed."
+msgstr "Compilation of Linux %(version)s has failed."
+
+msgid "Reboot required"
+msgstr "Reboot required"
+
+msgid "Reboot the system to use the new kernel."
+msgstr "Reboot the system to use the new kernel."
+
+msgid "Refresh versions (F5)"
+msgstr "Refresh versions (F5)"
+
+msgid "Clean build files"
+msgstr "Clean build files"
+
+msgid "About"
+msgstr "About"
+
+msgid "Quit (Ctrl+Q)"
+msgstr "Quit (Ctrl+Q)"
+
+msgid "A graphical interface for downloading, compiling and installing the Linux kernel with optimized profiles."
+msgstr "A graphical interface for downloading, compiling and installing the Linux kernel with optimized profiles."
+
+msgid "Clean build files?"
+msgstr "Clean build files?"
+
+msgid "All temporary files in ~/kernel_build will be deleted.\nThis will free up disk space."
+msgstr "All temporary files in ~/kernel_build will be deleted.\nThis will free up disk space."
+
+msgid "Build files deleted."
+msgstr "Build files deleted."
+
+msgid "Error cleaning files."
+msgstr "Error cleaning files."
+
 msgid "Error"
 msgstr "Error"
 
-#: kernel_installer_gui/app/main_window.py:421
-#, python-format
-msgid "Result: %s"
-msgstr "Result: %s"
+msgid "Unsupported distribution"
+msgstr "Unsupported distribution"
+
+msgid "%(distro)s is not officially supported. The program might not work correctly."
+msgstr "%(distro)s is not officially supported. The program might not work correctly."
+
+msgid "Please select a kernel version."
+msgstr "Please select a kernel version."
+
+msgid "Install kernel?"
+msgstr "Install kernel?"
+
+msgid "You are about to download, compile and install:\n\n• Version: Linux %(version)s\n• Profile: %(profile)s\n\nThis process may take several hours."
+msgstr "You are about to download, compile and install:\n\n• Version: Linux %(version)s\n• Profile: %(profile)s\n\nThis process may take several hours."
+
+msgid "Unknown"
+msgstr "Unknown"
 
