--- a/kernel_installer_gui/locale/es/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/es/LC_MESSAGES/kernel-installer.po
@@ -5,396 +5,303 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
 
-#: kernel_installer_gui/widgets/profile_selector.py:68
-msgid "Select kernel profile"
-msgstr "Selecciona perfil del kernel"
-
-#: kernel_installer_gui/widgets/version_picker.py:33
-msgid "Kernel version"
-msgstr "Versión del kernel"
-
-#: kernel_installer_gui/widgets/version_picker.py:51
-msgid "Check for updates"
-msgstr "Buscar actualizaciones"
-
-#: kernel_installer_gui/widgets/version_picker.py:93
-msgid "<span foreground='orange'>⚠ Experimental version (RC)</span>"
-msgstr "<span foreground='orange'>⚠ Versión experimental (RC)</span>"
-
-#: kernel_installer_gui/widgets/version_picker.py:95
-msgid "<b>✓ Latest stable version</b>"
-msgstr "<b>✓ Última versión estable</b>"
-
-#: kernel_installer_gui/widgets/version_picker.py:97
-msgid "Long-term support version (LTS)"
-msgstr "Versión con soporte a largo plazo (LTS)"
-
-#: kernel_installer_gui/widgets/version_picker.py:99
-msgid "Stable version"
-msgstr "Versión estable"
-
-#: kernel_installer_gui/widgets/version_picker.py:130
-msgid " (RC - Experimental)"
-msgstr " (RC - Experimental)"
-
-#: kernel_installer_gui/widgets/version_picker.py:132
-msgid " (Latest)"
-msgstr " (Última)"
-
-#: kernel_installer_gui/widgets/version_picker.py:134
-msgid " (LTS)"
-msgstr " (LTS)"
-
-#: kernel_installer_gui/widgets/build_progress.py:62
-msgid "SYSTEM LOAD"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:84
-msgid "Load average:"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:101
-#, python-format
-msgid "Cores: %d"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:117
-msgid "Ready to build"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:181
-#, python-format
-msgid "Time: %(h)02d:%(m)02d:%(s)02d"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:220
-msgid "Build completed successfully!"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:224
-msgid "Build failed"
-msgstr ""
-
-#: kernel_installer_gui/widgets/history_view.py:25
-msgid "📜 Installed kernels history"
-msgstr "📜 Historial de kernels instalados"
-
-#: kernel_installer_gui/widgets/history_view.py:54
-msgid "No kernels installed yet"
-msgstr "Aún no hay kernels instalados"
-
-#: kernel_installer_gui/widgets/history_view.py:79
-msgid "Current kernel"
-msgstr "Kernel actual"
-
-#: kernel_installer_gui/core/distro.py:363
-#: kernel_installer_gui/core/distro.py:365
-#: kernel_installer_gui/core/distro.py:374
-#: kernel_installer_gui/core/distro.py:376
-msgid "Unknown"
-msgstr "Desconocido"
-
-#: kernel_installer_gui/core/profiles.py:81
 msgid "Gaming"
 msgstr "Juegos"
 
-#: kernel_installer_gui/core/profiles.py:130
+msgid "Optimized for games with low input latency, high CPU performance and better GPU management. Ideal for gamers and streaming."
+msgstr "Optimizado para juegos con baja latencia de entrada, alto rendimiento de CPU y mejor gestión de GPU. Ideal para gamers y streaming."
+
 msgid "Audio/Video"
 msgstr "Audio/Vídeo"
 
-#: kernel_installer_gui/core/profiles.py:179
+msgid "Low-latency kernel for audio and video production. Optimized for DAWs, video editing and professional streaming. Uses real-time preemption for ultra-low latency."
+msgstr "Kernel de baja latencia para producción de audio y vídeo. Optimizado para DAWs, edición de vídeo y streaming profesional. Utiliza preemoción en tiempo real para una latencia ultra baja."
+
 msgid "Minimal / Office"
 msgstr "Mínimo / Oficina"
 
-#: kernel_installer_gui/core/notifications.py:65
-msgid "New kernel version available"
-msgstr ""
+msgid "Lightweight kernel for office work, web browsing and general use. No unnecessary modules, low resource consumption. Ideal for older hardware or virtual machines."
+msgstr "Kernel ligero para tareas de oficina, navegación web y uso general. Sin módulos innecesarios, bajo consumo de recursos. Ideal para hardware antiguo o máquinas virtuales."
 
-#: kernel_installer_gui/core/notifications.py:66
-#, python-format
-msgid "Linux %(version)s is available for download."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:74
-msgid "Download complete"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:75
-#, python-format
-msgid "Linux %(version)s has been downloaded successfully."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:84
-msgid "Build complete"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:85
-#, python-format
-msgid "Linux %(version)s has been compiled and installed successfully."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:91
-#: kernel_installer_gui/core/kernel.py:319
-msgid "Build error"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:92
-#, python-format
-msgid "Compilation of Linux %(version)s has failed."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:100
-msgid "Reboot required"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:101
-msgid "Reboot the system to use the new kernel."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:184
-#, python-format
-msgid "Preparing download for Linux %(version)s..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:188
-msgid "Error: Could not create build directory"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:195
-#, python-format
-msgid "Downloading linux-%(version)s.tar.xz..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:202
-#, python-format
-msgid "Download error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:205
-msgid "Download complete. Extracting..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:212
-#, python-format
-msgid "Extraction error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:215
-msgid "Extraction complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:233
-msgid "Copying current kernel configuration..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:244
-#, python-format
-msgid "Applying profile: %(profile)s..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:250
-#, python-format
-msgid "Warning applying profile: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:259
-msgid "Running make oldconfig..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:265
-msgid "Configuration complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:281
-#, python-format
-msgid "Compiling kernel with %(cores)d cores..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:302
-msgid "Generating .deb packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:306
-msgid "Generating RPM packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:310
-msgid "Compiling for direct installation..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:324
-msgid "Compiling modules..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:328
-msgid "Error compiling modules"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:331
-msgid "Build complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:345
-#: kernel_installer_gui/core/kernel.py:387
-msgid "Installing kernel..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:354
-msgid "Installing .deb packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:359
-#, python-format
-msgid "Installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:368
-msgid "Installing RPM packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:374
-#, python-format
-msgid "RPM installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:379
-msgid "Installing modules..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:384
-#, python-format
-msgid "Module installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:392
-#, python-format
-msgid "Kernel installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:396
-msgid "Regenerating initramfs..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:401
-msgid "Warning: Error regenerating initramfs"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:404
-msgid "Updating bootloader..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:409
-msgid "Warning: Error updating bootloader"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:414
-#: kernel_installer_gui/app/main_window.py:374
-msgid "Installation complete!"
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:273
-#: kernel_installer_gui/app/main_window.py:51
 msgid "Kernel Installer"
 msgstr "Instalador de Kernel"
 
-#: kernel_installer_gui/app/application.py:298
-msgid "Clean build files?"
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:310
-msgid "Build files deleted."
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:312
-msgid "Error cleaning files."
-msgstr ""
-
-#: kernel_installer_gui/app/main_window.py:52
 msgid "by Sergi Perich & Alexia Michelle"
 msgstr "por Sergi Perich y Alexia Michelle"
 
-#: kernel_installer_gui/app/main_window.py:63
-msgid "Refresh versions (F5)"
-msgstr "Actualizar versiones (F5)"
+msgid "Select kernel profile"
+msgstr "Selecciona perfil del kernel"
 
-#: kernel_installer_gui/app/main_window.py:64
-msgid "Clean build files"
-msgstr "Limpiar archivos de compilación"
+msgid "Kernel version"
+msgstr "Versión del kernel"
 
-#: kernel_installer_gui/app/main_window.py:65
-msgid "About"
-msgstr "Acerca de"
+msgid "Check for updates"
+msgstr "Buscar actualizaciones"
 
-#: kernel_installer_gui/app/main_window.py:66
-msgid "Quit (Ctrl+Q)"
-msgstr "Salir (Ctrl+Q)"
+msgid "<b>✓ Latest stable version</b>"
+msgstr "<b>✓ Última versión estable</b>"
 
-#: kernel_installer_gui/app/main_window.py:103
+msgid "Long-term support version (LTS)"
+msgstr "Versión con soporte a largo plazo (LTS)"
+
+msgid "Stable version"
+msgstr "Versión estable"
+
+msgid "<span foreground='orange'>⚠ Experimental version (RC)</span>"
+msgstr "<span foreground='orange'>⚠ Versión experimental (RC)</span>"
+
+msgid " (RC - Experimental)"
+msgstr " (RC - Experimental)"
+
+msgid " (Latest)"
+msgstr " (Última)"
+
+msgid " (LTS)"
+msgstr " (LTS)"
+
 msgid "Kernel name (suffix)"
 msgstr "Nombre del kernel (sufijo)"
 
-#: kernel_installer_gui/app/main_window.py:111
 msgid "E.g.: gaming, server, my-kernel"
 msgstr "Ej: gaming, servidor, mi-kernel"
 
-#: kernel_installer_gui/app/main_window.py:112
 msgid "This name will be added to the kernel, e.g.: 6.18.7-custom-gaming"
 msgstr "Este nombre se añadirá al kernel, ej: 6.18.7-custom-gaming"
 
-#: kernel_installer_gui/app/main_window.py:117
 msgid "Result: 6.x.x-custom-gaming (combined with profile)"
 msgstr "Resultado: 6.x.x-custom-gaming (combinado con perfil)"
 
-#: kernel_installer_gui/app/main_window.py:136
+msgid "Result: %s"
+msgstr "Resultado: %s"
+
 msgid "Distribution:"
 msgstr "Distribución:"
 
-#: kernel_installer_gui/app/main_window.py:141
 msgid "Detecting..."
 msgstr "Detectando..."
 
-#: kernel_installer_gui/app/main_window.py:148
 msgid "Current kernel:"
 msgstr "Kernel actual:"
 
-#: kernel_installer_gui/app/main_window.py:165
 msgid "Bootloader:"
 msgstr "Cargador de arranque:"
 
-#: kernel_installer_gui/app/main_window.py:177
 msgid "Initramfs:"
 msgstr "Initramfs:"
 
-#: kernel_installer_gui/app/main_window.py:190
 msgid "📥 Download and install kernel"
 msgstr "📥 Descargar e instalar kernel"
 
-#: kernel_installer_gui/app/main_window.py:212
+msgid "📜 Installed kernels history"
+msgstr "📜 Historial de kernels instalados"
+
+msgid "No kernels installed yet"
+msgstr "Aún no hay kernels instalados"
+
+msgid "Current kernel"
+msgstr "Kernel actual"
+
+msgid "SYSTEM LOAD"
+msgstr "CARGA DEL SISTEMA"
+
+msgid "Load average:"
+msgstr "Promedio de carga:"
+
+msgid "Cores: %d"
+msgstr "Núcleos: %d"
+
+msgid "Ready to build"
+msgstr "Listo para compilar"
+
+msgid "Time: %(h)02d:%(m)02d:%(s)02d"
+msgstr "Tiempo: %(h)02d:%(m)02d:%(s)02d"
+
+msgid "Build completed successfully!"
+msgstr "¡Compilación completada exitosamente!"
+
+msgid "Build failed"
+msgstr "Error en la compilación"
+
 msgid "Cancel"
 msgstr "Cancelar"
 
-#: kernel_installer_gui/app/main_window.py:218
 msgid "Done"
 msgstr "Hecho"
 
-#: kernel_installer_gui/app/main_window.py:262
-msgid "Unsupported distribution"
-msgstr ""
+msgid "Preparing download for Linux %(version)s..."
+msgstr "Preparando descarga de Linux %(version)s..."
 
-#: kernel_installer_gui/app/main_window.py:277
-msgid "Please select a kernel version."
-msgstr ""
+msgid "Error: Could not create build directory"
+msgstr "Error: No se pudo crear el directorio de compilación"
 
-#: kernel_installer_gui/app/main_window.py:312
-msgid "Install kernel?"
-msgstr ""
+msgid "Downloading linux-%(version)s.tar.xz..."
+msgstr "Descargando linux-%(version)s.tar.xz..."
 
-#: kernel_installer_gui/app/main_window.py:395
+msgid "Download error: %(error)s"
+msgstr "Error en la descarga: %(error)s"
+
+msgid "Download complete. Extracting..."
+msgstr "Descarga completada. Extrayendo..."
+
+msgid "Extraction error: %(error)s"
+msgstr "Error extrayendo: %(error)s"
+
+msgid "Extraction complete."
+msgstr "Extracción completada."
+
+msgid "Copying current kernel configuration..."
+msgstr "Copiando configuración actual del kernel..."
+
+msgid "Applying profile: %(profile)s..."
+msgstr "Aplicando perfil: %(profile)s..."
+
+msgid "Warning applying profile: %(error)s"
+msgstr "Advertencia aplicando perfil: %(error)s"
+
+msgid "Running make oldconfig..."
+msgstr "Ejecutando make oldconfig..."
+
+msgid "Configuration complete."
+msgstr "Configuración completada."
+
+msgid "Compiling kernel with %(cores)d cores..."
+msgstr "Compilando kernel con %(cores)d núcleos..."
+
+msgid "Generating .deb packages..."
+msgstr "Generando paquetes .deb..."
+
+msgid "Generating RPM packages..."
+msgstr "Generando paquetes RPM..."
+
+msgid "Compiling for direct installation..."
+msgstr "Compilando para instalación directa..."
+
+msgid "Compiling modules..."
+msgstr "Compilando módulos..."
+
+msgid "Error compiling modules"
+msgstr "Error compilando módulos"
+
+msgid "Build complete."
+msgstr "Compilación completada."
+
+msgid "Installing kernel..."
+msgstr "Instalando kernel..."
+
+msgid "Installing .deb packages..."
+msgstr "Instalando paquetes .deb..."
+
+msgid "Installation error: %(error)s"
+msgstr "Error instalando: %(error)s"
+
+msgid "Installing RPM packages..."
+msgstr "Instalando paquetes RPM..."
+
+msgid "RPM installation error: %(error)s"
+msgstr "Error instalando RPM: %(error)s"
+
+msgid "Installing modules..."
+msgstr "Instalando módulos..."
+
+msgid "Module installation error: %(error)s"
+msgstr "Error instalando módulos: %(error)s"
+
+msgid "Kernel installation error: %(error)s"
+msgstr "Error instalando kernel: %(error)s"
+
+msgid "Regenerating initramfs..."
+msgstr "Regenerando initramfs..."
+
+msgid "Warning: Error regenerating initramfs"
+msgstr "Advertencia: Error regenerando initramfs"
+
+msgid "Updating bootloader..."
+msgstr "Actualizando bootloader..."
+
+msgid "Warning: Error updating bootloader"
+msgstr "Advertencia: Error actualizando bootloader"
+
+msgid "Installation complete!"
+msgstr "¡Instalación completada!"
+
+msgid "The kernel has been installed successfully.\n\nDo you want to reboot now to use the new kernel?"
+msgstr "El kernel se ha instalado correctamente.\n\n¿Deseas reiniciar ahora para usar el nuevo kernel?"
+
+msgid "New kernel version available"
+msgstr "Nueva versión del kernel disponible"
+
+msgid "Linux %(version)s is available for download."
+msgstr "Linux %(version)s está disponible para descargar."
+
+msgid "Download complete"
+msgstr "Descarga completada"
+
+msgid "Linux %(version)s has been downloaded successfully."
+msgstr "Linux %(version)s se ha descargado correctamente."
+
+msgid "Build complete"
+msgstr "Compilación completada"
+
+msgid "Linux %(version)s has been compiled and installed successfully."
+msgstr "Linux %(version)s se ha compilado e instalado correctamente."
+
+msgid "Build error"
+msgstr "Error de compilación"
+
+msgid "Compilation of Linux %(version)s has failed."
+msgstr "La compilación de Linux %(version)s ha fallado."
+
+msgid "Reboot required"
+msgstr "Reinicio necesario"
+
+msgid "Reboot the system to use the new kernel."
+msgstr "Reinicia el sistema para usar el nuevo kernel."
+
+msgid "Refresh versions (F5)"
+msgstr "Actualizar versiones (F5)"
+
+msgid "Clean build files"
+msgstr "Limpiar archivos de compilación"
+
+msgid "About"
+msgstr "Acerca de"
+
+msgid "Quit (Ctrl+Q)"
+msgstr "Salir (Ctrl+Q)"
+
+msgid "A graphical interface for downloading, compiling and installing the Linux kernel with optimized profiles."
+msgstr "Una interfaz gráfica para descargar, compilar e instalar el kernel Linux con perfiles optimizados."
+
+msgid "Clean build files?"
+msgstr "¿Limpiar archivos de compilación?"
+
+msgid "All temporary files in ~/kernel_build will be deleted.\nThis will free up disk space."
+msgstr "Se eliminarán todos los archivos temporales de ~/kernel_build.\nEsto libertará espacio en disco."
+
+msgid "Build files deleted."
+msgstr "Archivos de compilación eliminados."
+
+msgid "Error cleaning files."
+msgstr "Error al limpiar archivos."
+
 msgid "Error"
-msgstr ""
+msgstr "Error"
 
-#: kernel_installer_gui/app/main_window.py:421
-#, python-format
-msgid "Result: %s"
-msgstr "Resultado: %s"
+msgid "Unsupported distribution"
+msgstr "Distribución no soportada"
+
+msgid "%(distro)s is not officially supported. The program might not work correctly."
+msgstr "%(distro)s no está oficialmente soportada. El programa podría no funcionar correctamente."
+
+msgid "Please select a kernel version."
+msgstr "Por favor, selecciona una versión del kernel."
+
+msgid "Install kernel?"
+msgstr "¿Instalar kernel?"
+
+msgid "You are about to download, compile and install:\n\n• Version: Linux %(version)s\n• Profile: %(profile)s\n\nThis process may take several hours."
+msgstr "Se va a descargar, compilar e instalar:\n\n• Versión: Linux %(version)s\n• Perfil: %(profile)s\n\nEste proceso puede tardar varias horas."
+
+msgid "Unknown"
+msgstr "Desconocido"
 
