--- a/kernel_installer_gui/locale/it/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/it/LC_MESSAGES/kernel-installer.po
@@ -5,396 +5,303 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: it\n"
 
-#: kernel_installer_gui/widgets/profile_selector.py:68
-msgid "Select kernel profile"
-msgstr "Seleziona il profilo del kernel"
-
-#: kernel_installer_gui/widgets/version_picker.py:33
-msgid "Kernel version"
-msgstr "Versione del kernel"
-
-#: kernel_installer_gui/widgets/version_picker.py:51
-msgid "Check for updates"
-msgstr "Controlla aggiornamenti"
-
-#: kernel_installer_gui/widgets/version_picker.py:93
-msgid "<span foreground='orange'>⚠ Experimental version (RC)</span>"
-msgstr "<span foreground='orange'>⚠ Versione sperimentale (RC)</span>"
-
-#: kernel_installer_gui/widgets/version_picker.py:95
-msgid "<b>✓ Latest stable version</b>"
-msgstr "<b>✓ Ultima versione stabile</b>"
-
-#: kernel_installer_gui/widgets/version_picker.py:97
-msgid "Long-term support version (LTS)"
-msgstr "Versione a supporto a largo termine (LTS)"
-
-#: kernel_installer_gui/widgets/version_picker.py:99
-msgid "Stable version"
-msgstr "Versione stabile"
-
-#: kernel_installer_gui/widgets/version_picker.py:130
-msgid " (RC - Experimental)"
-msgstr " (RC - Sperimentale)"
-
-#: kernel_installer_gui/widgets/version_picker.py:132
-msgid " (Latest)"
-msgstr " (Ultima)"
-
-#: kernel_installer_gui/widgets/version_picker.py:134
-msgid " (LTS)"
-msgstr " (LTS)"
-
-#: kernel_installer_gui/widgets/build_progress.py:62
-msgid "SYSTEM LOAD"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:84
-msgid "Load average:"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:101
-#, python-format
-msgid "Cores: %d"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:117
-msgid "Ready to build"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:181
-#, python-format
-msgid "Time: %(h)02d:%(m)02d:%(s)02d"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:220
-msgid "Build completed successfully!"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:224
-msgid "Build failed"
-msgstr ""
-
-#: kernel_installer_gui/widgets/history_view.py:25
-msgid "📜 Installed kernels history"
-msgstr "📜 Cronologia dei kernel installati"
-
-#: kernel_installer_gui/widgets/history_view.py:54
-msgid "No kernels installed yet"
-msgstr "Nessun kernel installato ancora"
-
-#: kernel_installer_gui/widgets/history_view.py:79
-msgid "Current kernel"
-msgstr "Kernel actuelle"
-
-#: kernel_installer_gui/core/distro.py:363
-#: kernel_installer_gui/core/distro.py:365
-#: kernel_installer_gui/core/distro.py:374
-#: kernel_installer_gui/core/distro.py:376
-msgid "Unknown"
-msgstr "Sconosciuto"
-
-#: kernel_installer_gui/core/profiles.py:81
 msgid "Gaming"
 msgstr "Gaming/Giochi"
 
-#: kernel_installer_gui/core/profiles.py:130
+msgid "Optimized for games with low input latency, high CPU performance and better GPU management. Ideal for gamers and streaming."
+msgstr "Ottimizzato per i giochi con bassa latenza di input, elevate prestazioni della CPU e migliore gestione della GPU. Ideale per giocatori e streaming."
+
 msgid "Audio/Video"
 msgstr "Audio/Video"
 
-#: kernel_installer_gui/core/profiles.py:179
+msgid "Low-latency kernel for audio and video production. Optimized for DAWs, video editing and professional streaming. Uses real-time preemption for ultra-low latency."
+msgstr "Kernel a bassa latenza per la produzione audio e video. Ottimizzato per DAW, montaggio video e streaming professionale. Utiliza il preemption in tempo reale per una latenza ultra bassa."
+
 msgid "Minimal / Office"
 msgstr "Minimo / Ufficio"
 
-#: kernel_installer_gui/core/notifications.py:65
-msgid "New kernel version available"
-msgstr ""
+msgid "Lightweight kernel for office work, web browsing and general use. No unnecessary modules, low resource consumption. Ideal for older hardware or virtual machines."
+msgstr "Kernel leggero per lavori d'ufficio, navigazione web e uso generale. Nessun modulo necessario, basso consumo di risorse. Ideale per hardware datato o macchine virtuali."
 
-#: kernel_installer_gui/core/notifications.py:66
-#, python-format
-msgid "Linux %(version)s is available for download."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:74
-msgid "Download complete"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:75
-#, python-format
-msgid "Linux %(version)s has been downloaded successfully."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:84
-msgid "Build complete"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:85
-#, python-format
-msgid "Linux %(version)s has been compiled and installed successfully."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:91
-#: kernel_installer_gui/core/kernel.py:319
-msgid "Build error"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:92
-#, python-format
-msgid "Compilation of Linux %(version)s has failed."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:100
-msgid "Reboot required"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:101
-msgid "Reboot the system to use the new kernel."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:184
-#, python-format
-msgid "Preparing download for Linux %(version)s..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:188
-msgid "Error: Could not create build directory"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:195
-#, python-format
-msgid "Downloading linux-%(version)s.tar.xz..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:202
-#, python-format
-msgid "Download error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:205
-msgid "Download complete. Extracting..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:212
-#, python-format
-msgid "Extraction error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:215
-msgid "Extraction complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:233
-msgid "Copying current kernel configuration..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:244
-#, python-format
-msgid "Applying profile: %(profile)s..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:250
-#, python-format
-msgid "Warning applying profile: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:259
-msgid "Running make oldconfig..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:265
-msgid "Configuration complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:281
-#, python-format
-msgid "Compiling kernel with %(cores)d cores..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:302
-msgid "Generating .deb packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:306
-msgid "Generating RPM packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:310
-msgid "Compiling for direct installation..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:324
-msgid "Compiling modules..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:328
-msgid "Error compiling modules"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:331
-msgid "Build complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:345
-#: kernel_installer_gui/core/kernel.py:387
-msgid "Installing kernel..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:354
-msgid "Installing .deb packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:359
-#, python-format
-msgid "Installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:368
-msgid "Installing RPM packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:374
-#, python-format
-msgid "RPM installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:379
-msgid "Installing modules..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:384
-#, python-format
-msgid "Module installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:392
-#, python-format
-msgid "Kernel installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:396
-msgid "Regenerating initramfs..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:401
-msgid "Warning: Error regenerating initramfs"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:404
-msgid "Updating bootloader..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:409
-msgid "Warning: Error updating bootloader"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:414
-#: kernel_installer_gui/app/main_window.py:374
-msgid "Installation complete!"
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:273
-#: kernel_installer_gui/app/main_window.py:51
 msgid "Kernel Installer"
 msgstr "Installatore di Kernel"
 
-#: kernel_installer_gui/app/application.py:298
-msgid "Clean build files?"
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:310
-msgid "Build files deleted."
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:312
-msgid "Error cleaning files."
-msgstr ""
-
-#: kernel_installer_gui/app/main_window.py:52
 msgid "by Sergi Perich & Alexia Michelle"
 msgstr "da Sergi Perich & Alexia Michelle"
 
-#: kernel_installer_gui/app/main_window.py:63
-msgid "Refresh versions (F5)"
-msgstr "Aggiorna versioni (F5)"
+msgid "Select kernel profile"
+msgstr "Seleziona il profilo del kernel"
 
-#: kernel_installer_gui/app/main_window.py:64
-msgid "Clean build files"
-msgstr "Pulisci i file de compilazione"
+msgid "Kernel version"
+msgstr "Versione del kernel"
 
-#: kernel_installer_gui/app/main_window.py:65
-msgid "About"
-msgstr "Informazioni"
+msgid "Check for updates"
+msgstr "Controlla aggiornamenti"
 
-#: kernel_installer_gui/app/main_window.py:66
-msgid "Quit (Ctrl+Q)"
-msgstr "Esci (Ctrl+Q)"
+msgid "<b>✓ Latest stable version</b>"
+msgstr "<b>✓ Ultima versione stabile</b>"
 
-#: kernel_installer_gui/app/main_window.py:103
+msgid "Long-term support version (LTS)"
+msgstr "Versione a supporto a largo termine (LTS)"
+
+msgid "Stable version"
+msgstr "Versione stabile"
+
+msgid "<span foreground='orange'>⚠ Experimental version (RC)</span>"
+msgstr "<span foreground='orange'>⚠ Versione sperimentale (RC)</span>"
+
+msgid " (RC - Experimental)"
+msgstr " (RC - Sperimentale)"
+
+msgid " (Latest)"
+msgstr " (Ultima)"
+
+msgid " (LTS)"
+msgstr " (LTS)"
+
 msgid "Kernel name (suffix)"
 msgstr "Nome del kernel (suffisso)"
 
-#: kernel_installer_gui/app/main_window.py:111
 msgid "E.g.: gaming, server, my-kernel"
 msgstr "Esempio: gaming, server, mio-kernel"
 
-#: kernel_installer_gui/app/main_window.py:112
 msgid "This name will be added to the kernel, e.g.: 6.18.7-custom-gaming"
 msgstr "Questo nome verrà aggiunto al kernel, es: 6.18.7-custom-gaming"
 
-#: kernel_installer_gui/app/main_window.py:117
 msgid "Result: 6.x.x-custom-gaming (combined with profile)"
 msgstr "Risultato: 6.x.x-custom-gaming (combinato con il profilo)"
 
-#: kernel_installer_gui/app/main_window.py:136
+msgid "Result: %s"
+msgstr "Risultato: %s"
+
 msgid "Distribution:"
 msgstr "Distribuzione:"
 
-#: kernel_installer_gui/app/main_window.py:141
 msgid "Detecting..."
 msgstr "Rilevamento..."
 
-#: kernel_installer_gui/app/main_window.py:148
 msgid "Current kernel:"
 msgstr "Kernel actuelle:"
 
-#: kernel_installer_gui/app/main_window.py:165
 msgid "Bootloader:"
 msgstr "Bootloader:"
 
-#: kernel_installer_gui/app/main_window.py:177
 msgid "Initramfs:"
 msgstr "Initramfs:"
 
-#: kernel_installer_gui/app/main_window.py:190
 msgid "📥 Download and install kernel"
 msgstr "📥 Scarica e installa il kernel"
 
-#: kernel_installer_gui/app/main_window.py:212
+msgid "📜 Installed kernels history"
+msgstr "📜 Cronologia dei kernel installati"
+
+msgid "No kernels installed yet"
+msgstr "Nessun kernel installato ainda"
+
+msgid "Current kernel"
+msgstr "Kernel actuelle"
+
+msgid "SYSTEM LOAD"
+msgstr "CARICO DEL SISTEMA"
+
+msgid "Load average:"
+msgstr "Media del carico:"
+
+msgid "Cores: %d"
+msgstr "Core: %d"
+
+msgid "Ready to build"
+msgstr "Pronto per la compilazione"
+
+msgid "Time: %(h)02d:%(m)02d:%(s)02d"
+msgstr "Tempo: %(h)02d:%(m)02d:%(s)02d"
+
+msgid "Build completed successfully!"
+msgstr "Compilazione completata con successo!"
+
+msgid "Build failed"
+msgstr "Compilazione fallita"
+
 msgid "Cancel"
 msgstr "Annulla"
 
-#: kernel_installer_gui/app/main_window.py:218
 msgid "Done"
 msgstr "Fatto"
 
-#: kernel_installer_gui/app/main_window.py:262
-msgid "Unsupported distribution"
-msgstr ""
+msgid "Preparing download for Linux %(version)s..."
+msgstr "Preparazione del download per Linux %(version)s..."
 
-#: kernel_installer_gui/app/main_window.py:277
-msgid "Please select a kernel version."
-msgstr ""
+msgid "Error: Could not create build directory"
+msgstr "Errore: impossibile creare la directory di compilazione"
 
-#: kernel_installer_gui/app/main_window.py:312
-msgid "Install kernel?"
-msgstr ""
+msgid "Downloading linux-%(version)s.tar.xz..."
+msgstr "Download di linux-%(version)s.tar.xz..."
 
-#: kernel_installer_gui/app/main_window.py:395
+msgid "Download error: %(error)s"
+msgstr "Errore di download: %(error)s"
+
+msgid "Download complete. Extracting..."
+msgstr "Download completato. Estrazione..."
+
+msgid "Extraction error: %(error)s"
+msgstr "Errore di estrazione: %(error)s"
+
+msgid "Extraction complete."
+msgstr "Estrazione completata."
+
+msgid "Copying current kernel configuration..."
+msgstr "Copia della configurazione del kernel corrente..."
+
+msgid "Applying profile: %(profile)s..."
+msgstr "Applicazione del profilo: %(profile)s..."
+
+msgid "Warning applying profile: %(error)s"
+msgstr "Avviso durante l'applicazione del profilo: %(error)s"
+
+msgid "Running make oldconfig..."
+msgstr "Esecuzione di make oldconfig..."
+
+msgid "Configuration complete."
+msgstr "Configurazione completata."
+
+msgid "Compiling kernel with %(cores)d cores..."
+msgstr "Compilazione del kernel con %(cores)d core..."
+
+msgid "Generating .deb packages..."
+msgstr "Generazione pacchetti .deb..."
+
+msgid "Generating RPM packages..."
+msgstr "Generazione pacchetti RPM..."
+
+msgid "Compiling for direct installation..."
+msgstr "Compilazione per l'installazione directa..."
+
+msgid "Compiling modules..."
+msgstr "Compilazione moduli..."
+
+msgid "Error compiling modules"
+msgstr "Errore durante la compilazione dei moduli"
+
+msgid "Build complete."
+msgstr "Compilazione completata."
+
+msgid "Installing kernel..."
+msgstr "Installazione del kernel..."
+
+msgid "Installing .deb packages..."
+msgstr "Installazione pacchetti .deb..."
+
+msgid "Installation error: %(error)s"
+msgstr "Errore di installazione: %(error)s"
+
+msgid "Installing RPM packages..."
+msgstr "Installazione pacchetti RPM..."
+
+msgid "RPM installation error: %(error)s"
+msgstr "Errore di installazione RPM: %(error)s"
+
+msgid "Installing modules..."
+msgstr "Installazione moduli..."
+
+msgid "Module installation error: %(error)s"
+msgstr "Errore durante l'installazione dei moduli: %(error)s"
+
+msgid "Kernel installation error: %(error)s"
+msgstr "Errore durante l'installazione del kernel: %(error)s"
+
+msgid "Regenerating initramfs..."
+msgstr "Rigenerazione di initramfs..."
+
+msgid "Warning: Error regenerating initramfs"
+msgstr "Avviso: Erore durante la rigenerazione di initramfs"
+
+msgid "Updating bootloader..."
+msgstr "Aggiornamento bootloader..."
+
+msgid "Warning: Error updating bootloader"
+msgstr "Avviso: Errore durante l'aggiornamento del bootloader"
+
+msgid "Installation complete!"
+msgstr "Installazione completata!"
+
+msgid "The kernel has been installed successfully.\n\nDo you want to reboot now to use the new kernel?"
+msgstr "Il kernel è stato installato con successo.\n\nVuoi riavviare ora per utilizzare il nuevo kernel?"
+
+msgid "New kernel version available"
+msgstr "Nuova versione del kernel disponible"
+
+msgid "Linux %(version)s is available for download."
+msgstr "Linux %(version)s è disponibile per il download."
+
+msgid "Download complete"
+msgstr "Download completato"
+
+msgid "Linux %(version)s has been downloaded successfully."
+msgstr "Linux %(version)s è stato scaricato con successo."
+
+msgid "Build complete"
+msgstr "Compilazione completata"
+
+msgid "Linux %(version)s has been compiled and installed successfully."
+msgstr "Linux %(version)s è stato compilato e installato con successo."
+
+msgid "Build error"
+msgstr "Errore di compilazione"
+
+msgid "Compilation of Linux %(version)s has failed."
+msgstr "La compilazione di Linux %(version)s è fallita."
+
+msgid "Reboot required"
+msgstr "Riavvio requerido"
+
+msgid "Reboot the system to use the new kernel."
+msgstr "Riavvia il sistema per utilizzare il nuevo kernel."
+
+msgid "Refresh versions (F5)"
+msgstr "Aggiorna versioni (F5)"
+
+msgid "Clean build files"
+msgstr "Pulisci i file de compilazione"
+
+msgid "About"
+msgstr "Informazioni"
+
+msgid "Quit (Ctrl+Q)"
+msgstr "Esci (Ctrl+Q)"
+
+msgid "A graphical interface for downloading, compiling and installing the Linux kernel with optimized profiles."
+msgstr "Un'interfaccia grafica per scaricare, compilare e installare il kernel Linux con profili ottimizzati."
+
+msgid "Clean build files?"
+msgstr "Pulire i file di compilazione?"
+
+msgid "All temporary files in ~/kernel_build will be deleted.\nThis will free up disk space."
+msgstr "Tutti i file temporanei in ~/kernel_build verranno eliminati.\nQuesto libererà espacio su disco."
+
+msgid "Build files deleted."
+msgstr "File di compilazione eliminati."
+
+msgid "Error cleaning files."
+msgstr "Errore durante la pulizia dei file."
+
 msgid "Error"
-msgstr ""
+msgstr "Errore"
 
-#: kernel_installer_gui/app/main_window.py:421
-#, python-format
-msgid "Result: %s"
-msgstr "Risultato: %s"
+msgid "Unsupported distribution"
+msgstr "Distribuzione non supportata"
+
+msgid "%(distro)s is not officially supported. The program might not work correctly."
+msgstr "%(distro)s non è ufficialmente supportato. Il programa potrebbe non funzionare correctamente."
+
+msgid "Please select a kernel version."
+msgstr "Selezionare una versione del kernel."
+
+msgid "Install kernel?"
+msgstr "Installare il kernel?"
+
+msgid "You are about to download, compile and install:\n\n• Version: Linux %(version)s\n• Profile: %(profile)s\n\nThis process may take several hours."
+msgstr "Stai per scaricare, compilare e installare:\n\n• Versione: Linux %(version)s\n• Profilo: %(profile)s\n\nQuesto processo podría requerir varias horas."
+
+msgid "Unknown"
+msgstr "Sconosciuto"
 
