--- a/kernel_installer_gui/locale/ro/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/ro/LC_MESSAGES/kernel-installer.po
@@ -5,396 +5,303 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ro\n"
 
-#: kernel_installer_gui/widgets/profile_selector.py:68
-msgid "Select kernel profile"
-msgstr "Selectați profilul nucleului"
-
-#: kernel_installer_gui/widgets/version_picker.py:33
-msgid "Kernel version"
-msgstr "Versiunea nucleului"
-
-#: kernel_installer_gui/widgets/version_picker.py:51
-msgid "Check for updates"
-msgstr "Verifică actualizările"
-
-#: kernel_installer_gui/widgets/version_picker.py:93
-msgid "<span foreground='orange'>⚠ Experimental version (RC)</span>"
-msgstr "<span foreground='orange'>⚠ Versiune experimentală (RC)</span>"
-
-#: kernel_installer_gui/widgets/version_picker.py:95
-msgid "<b>✓ Latest stable version</b>"
-msgstr "<b>✓ Ultima versiune stabilă</b>"
-
-#: kernel_installer_gui/widgets/version_picker.py:97
-msgid "Long-term support version (LTS)"
-msgstr "Versiune cu suport pe termen lung (LTS)"
-
-#: kernel_installer_gui/widgets/version_picker.py:99
-msgid "Stable version"
-msgstr "Versiune stabilă"
-
-#: kernel_installer_gui/widgets/version_picker.py:130
-msgid " (RC - Experimental)"
-msgstr " (RC - Experimental)"
-
-#: kernel_installer_gui/widgets/version_picker.py:132
-msgid " (Latest)"
-msgstr " (Ultima)"
-
-#: kernel_installer_gui/widgets/version_picker.py:134
-msgid " (LTS)"
-msgstr " (LTS)"
-
-#: kernel_installer_gui/widgets/build_progress.py:62
-msgid "SYSTEM LOAD"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:84
-msgid "Load average:"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:101
-#, python-format
-msgid "Cores: %d"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:117
-msgid "Ready to build"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:181
-#, python-format
-msgid "Time: %(h)02d:%(m)02d:%(s)02d"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:220
-msgid "Build completed successfully!"
-msgstr ""
-
-#: kernel_installer_gui/widgets/build_progress.py:224
-msgid "Build failed"
-msgstr ""
-
-#: kernel_installer_gui/widgets/history_view.py:25
-msgid "📜 Installed kernels history"
-msgstr "📜 Istoricul nucleelor instalate"
-
-#: kernel_installer_gui/widgets/history_view.py:54
-msgid "No kernels installed yet"
-msgstr "Nu există nuclee instalate încă"
-
-#: kernel_installer_gui/widgets/history_view.py:79
-msgid "Current kernel"
-msgstr "Nucleul actual"
-
-#: kernel_installer_gui/core/distro.py:363
-#: kernel_installer_gui/core/distro.py:365
-#: kernel_installer_gui/core/distro.py:374
-#: kernel_installer_gui/core/distro.py:376
-msgid "Unknown"
-msgstr "Necunoscut"
-
-#: kernel_installer_gui/core/profiles.py:81
 msgid "Gaming"
 msgstr "Jocuri"
 
-#: kernel_installer_gui/core/profiles.py:130
+msgid "Optimized for games with low input latency, high CPU performance and better GPU management. Ideal for gamers and streaming."
+msgstr "Optimizat pentru jocuri cu latență scăzută de intrare, performanță ridicată a procesorului și o mai bună gestionare a procesorului grafic. Ideal pentru jucători și streaming."
+
 msgid "Audio/Video"
 msgstr "Audio/Video"
 
-#: kernel_installer_gui/core/profiles.py:179
+msgid "Low-latency kernel for audio and video production. Optimized for DAWs, video editing and professional streaming. Uses real-time preemption for ultra-low latency."
+msgstr "Nucleu cu latență scăzută pentru producția audio și video. Optimizat pentru DAW-uri, editare video și streaming profesional. Utilizează preempțiunea în timp real pentru o latență ultra-scăzută."
+
 msgid "Minimal / Office"
 msgstr "Minimal / Office"
 
-#: kernel_installer_gui/core/notifications.py:65
-msgid "New kernel version available"
-msgstr ""
+msgid "Lightweight kernel for office work, web browsing and general use. No unnecessary modules, low resource consumption. Ideal for older hardware or virtual machines."
+msgstr "Nucleu ușor pentru munca de birou, navigarea pe web și utilizarea generală. Fără module inutile, consum redus de resurse. Ideal pentru hardware vechi sau mașini virtuale."
 
-#: kernel_installer_gui/core/notifications.py:66
-#, python-format
-msgid "Linux %(version)s is available for download."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:74
-msgid "Download complete"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:75
-#, python-format
-msgid "Linux %(version)s has been downloaded successfully."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:84
-msgid "Build complete"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:85
-#, python-format
-msgid "Linux %(version)s has been compiled and installed successfully."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:91
-#: kernel_installer_gui/core/kernel.py:319
-msgid "Build error"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:92
-#, python-format
-msgid "Compilation of Linux %(version)s has failed."
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:100
-msgid "Reboot required"
-msgstr ""
-
-#: kernel_installer_gui/core/notifications.py:101
-msgid "Reboot the system to use the new kernel."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:184
-#, python-format
-msgid "Preparing download for Linux %(version)s..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:188
-msgid "Error: Could not create build directory"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:195
-#, python-format
-msgid "Downloading linux-%(version)s.tar.xz..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:202
-#, python-format
-msgid "Download error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:205
-msgid "Download complete. Extracting..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:212
-#, python-format
-msgid "Extraction error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:215
-msgid "Extraction complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:233
-msgid "Copying current kernel configuration..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:244
-#, python-format
-msgid "Applying profile: %(profile)s..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:250
-#, python-format
-msgid "Warning applying profile: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:259
-msgid "Running make oldconfig..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:265
-msgid "Configuration complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:281
-#, python-format
-msgid "Compiling kernel with %(cores)d cores..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:302
-msgid "Generating .deb packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:306
-msgid "Generating RPM packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:310
-msgid "Compiling for direct installation..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:324
-msgid "Compiling modules..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:328
-msgid "Error compiling modules"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:331
-msgid "Build complete."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:345
-#: kernel_installer_gui/core/kernel.py:387
-msgid "Installing kernel..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:354
-msgid "Installing .deb packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:359
-#, python-format
-msgid "Installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:368
-msgid "Installing RPM packages..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:374
-#, python-format
-msgid "RPM installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:379
-msgid "Installing modules..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:384
-#, python-format
-msgid "Module installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:392
-#, python-format
-msgid "Kernel installation error: %(error)s"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:396
-msgid "Regenerating initramfs..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:401
-msgid "Warning: Error regenerating initramfs"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:404
-msgid "Updating bootloader..."
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:409
-msgid "Warning: Error updating bootloader"
-msgstr ""
-
-#: kernel_installer_gui/core/kernel.py:414
-#: kernel_installer_gui/app/main_window.py:374
-msgid "Installation complete!"
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:273
-#: kernel_installer_gui/app/main_window.py:51
 msgid "Kernel Installer"
 msgstr "Instalator de Kernel"
 
-#: kernel_installer_gui/app/application.py:298
-msgid "Clean build files?"
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:310
-msgid "Build files deleted."
-msgstr ""
-
-#: kernel_installer_gui/app/application.py:312
-msgid "Error cleaning files."
-msgstr ""
-
-#: kernel_installer_gui/app/main_window.py:52
 msgid "by Sergi Perich & Alexia Michelle"
 msgstr "de Sergi Perich și Alexia Michelle"
 
-#: kernel_installer_gui/app/main_window.py:63
-msgid "Refresh versions (F5)"
-msgstr "Actualizează versiunile (F5)"
+msgid "Select kernel profile"
+msgstr "Selectați profilul nucleului"
 
-#: kernel_installer_gui/app/main_window.py:64
-msgid "Clean build files"
-msgstr "Curăță fișierele de construcție"
+msgid "Kernel version"
+msgstr "Versiunea nucleului"
 
-#: kernel_installer_gui/app/main_window.py:65
-msgid "About"
-msgstr "Despre"
+msgid "Check for updates"
+msgstr "Verifică actualizările"
 
-#: kernel_installer_gui/app/main_window.py:66
-msgid "Quit (Ctrl+Q)"
-msgstr "Ieșire (Ctrl+Q)"
+msgid "<b>✓ Latest stable version</b>"
+msgstr "<b>✓ Ultima versiune stabilă</b>"
 
-#: kernel_installer_gui/app/main_window.py:103
+msgid "Long-term support version (LTS)"
+msgstr "Versiune cu suport pe termen lung (LTS)"
+
+msgid "Stable version"
+msgstr "Versiune stabilă"
+
+msgid "<span foreground='orange'>⚠ Experimental version (RC)</span>"
+msgstr "<span foreground='orange'>⚠ Versiune experimentală (RC)</span>"
+
+msgid " (RC - Experimental)"
+msgstr " (RC - Experimental)"
+
+msgid " (Latest)"
+msgstr " (Ultima)"
+
+msgid " (LTS)"
+msgstr " (LTS)"
+
 msgid "Kernel name (suffix)"
 msgstr "Numele nucleului (sufix)"
 
-#: kernel_installer_gui/app/main_window.py:111
 msgid "E.g.: gaming, server, my-kernel"
 msgstr "Ex: gaming, server, nucleul-meu"
 
-#: kernel_installer_gui/app/main_window.py:112
 msgid "This name will be added to the kernel, e.g.: 6.18.7-custom-gaming"
 msgstr "Acest nume va fi adăugat la nucleu, ex: 6.18.7-custom-gaming"
 
-#: kernel_installer_gui/app/main_window.py:117
 msgid "Result: 6.x.x-custom-gaming (combined with profile)"
 msgstr "Rezultat: 6.x.x-custom-gaming (combinat cu profil)"
 
-#: kernel_installer_gui/app/main_window.py:136
+msgid "Result: %s"
+msgstr "Rezultat: %s"
+
 msgid "Distribution:"
 msgstr "Distribuție:"
 
-#: kernel_installer_gui/app/main_window.py:141
 msgid "Detecting..."
 msgstr "Detectare..."
 
-#: kernel_installer_gui/app/main_window.py:148
 msgid "Current kernel:"
 msgstr "Nucleul actual:"
 
-#: kernel_installer_gui/app/main_window.py:165
 msgid "Bootloader:"
 msgstr "Încărcător de pornire:"
 
-#: kernel_installer_gui/app/main_window.py:177
 msgid "Initramfs:"
 msgstr "Initramfs:"
 
-#: kernel_installer_gui/app/main_window.py:190
 msgid "📥 Download and install kernel"
 msgstr "📥 Descărcați și instalați nucleul"
 
-#: kernel_installer_gui/app/main_window.py:212
+msgid "📜 Installed kernels history"
+msgstr "📜 Istoricul nucleelor instalate"
+
+msgid "No kernels installed yet"
+msgstr "Nu există nuclee instalate încă"
+
+msgid "Current kernel"
+msgstr "Nucleul actual"
+
+msgid "SYSTEM LOAD"
+msgstr "SARCINA SISTEMULUI"
+
+msgid "Load average:"
+msgstr "Media de încărcare:"
+
+msgid "Cores: %d"
+msgstr "Nuclee: %d"
+
+msgid "Ready to build"
+msgstr "Gata de construcție"
+
+msgid "Time: %(h)02d:%(m)02d:%(s)02d"
+msgstr "Timp: %(h)02d:%(m)02d:%(s)02d"
+
+msgid "Build completed successfully!"
+msgstr "Construcție finalizată cu succes!"
+
+msgid "Build failed"
+msgstr "Construcție eșuată"
+
 msgid "Cancel"
 msgstr "Anulează"
 
-#: kernel_installer_gui/app/main_window.py:218
 msgid "Done"
 msgstr "Gata"
 
-#: kernel_installer_gui/app/main_window.py:262
-msgid "Unsupported distribution"
-msgstr ""
+msgid "Preparing download for Linux %(version)s..."
+msgstr "Se pregătește descărcarea pentru Linux %(version)s..."
 
-#: kernel_installer_gui/app/main_window.py:277
-msgid "Please select a kernel version."
-msgstr ""
+msgid "Error: Could not create build directory"
+msgstr "Eroare: Nu s-a putut crea directorul de construcție"
 
-#: kernel_installer_gui/app/main_window.py:312
-msgid "Install kernel?"
-msgstr ""
+msgid "Downloading linux-%(version)s.tar.xz..."
+msgstr "Se descarcă linux-%(version)s.tar.xz..."
 
-#: kernel_installer_gui/app/main_window.py:395
+msgid "Download error: %(error)s"
+msgstr "Eroare la descărcare: %(error)s"
+
+msgid "Download complete. Extracting..."
+msgstr "Descărcare completă. Se extrage..."
+
+msgid "Extraction error: %(error)s"
+msgstr "Eroare la extracție: %(error)s"
+
+msgid "Extraction complete."
+msgstr "Extracție completă."
+
+msgid "Copying current kernel configuration..."
+msgstr "Se copiază configurația curentă a nucleului..."
+
+msgid "Applying profile: %(profile)s..."
+msgstr "Se aplică profilul: %(profile)s..."
+
+msgid "Warning applying profile: %(error)s"
+msgstr "Avertisment la aplicarea profilului: %(error)s"
+
+msgid "Running make oldconfig..."
+msgstr "Se rulează make oldconfig..."
+
+msgid "Configuration complete."
+msgstr "Configurație completă."
+
+msgid "Compiling kernel with %(cores)d cores..."
+msgstr "Se compilează nucleul cu %(cores)d nuclee..."
+
+msgid "Generating .deb packages..."
+msgstr "Se generează pachete .deb..."
+
+msgid "Generating RPM packages..."
+msgstr "Se generează pachete RPM..."
+
+msgid "Compiling for direct installation..."
+msgstr "Se compilează pentru instalare directă..."
+
+msgid "Compiling modules..."
+msgstr "Se compilează modulele..."
+
+msgid "Error compiling modules"
+msgstr "Eroare la compilarea modulelor"
+
+msgid "Build complete."
+msgstr "Construcție finalizada."
+
+msgid "Installing kernel..."
+msgstr "Se instalează nucleul..."
+
+msgid "Installing .deb packages..."
+msgstr "Se instalează pachetele .deb..."
+
+msgid "Installation error: %(error)s"
+msgstr "Eroare la instalare: %(error)s"
+
+msgid "Installing RPM packages..."
+msgstr "Se instalează pachetele RPM..."
+
+msgid "RPM installation error: %(error)s"
+msgstr "Eroare la instalare RPM: %(error)s"
+
+msgid "Installing modules..."
+msgstr "Se instalează modulele..."
+
+msgid "Module installation error: %(error)s"
+msgstr "Eroare la instalarea modulelor: %(error)s"
+
+msgid "Kernel installation error: %(error)s"
+msgstr "Eroare la instalarea nucleului: %(error)s"
+
+msgid "Regenerating initramfs..."
+msgstr "Se regenerează initramfs..."
+
+msgid "Warning: Error regenerating initramfs"
+msgstr "Avertisment: Eroare la regenerarea initramfs"
+
+msgid "Updating bootloader..."
+msgstr "Se actualizează bootloader-ul..."
+
+msgid "Warning: Error updating bootloader"
+msgstr "Avertisment: Eroare la actualizarea bootloader-ului"
+
+msgid "Installation complete!"
+msgstr "Instalare finalizată!"
+
+msgid "The kernel has been installed successfully.\n\nDo you want to reboot now to use the new kernel?"
+msgstr "Nucleul a fost instalat cu succes.\n\nDoriți să reporniți acum pentru a utiliza noul nucleu?"
+
+msgid "New kernel version available"
+msgstr "Nouă versiune de nucleu disponibilă"
+
+msgid "Linux %(version)s is available for download."
+msgstr "Linux %(version)s este disponibil pentru descărcare."
+
+msgid "Download complete"
+msgstr "Descărcare completă"
+
+msgid "Linux %(version)s has been downloaded successfully."
+msgstr "Linux %(version)s a fost descărcat con éxito."
+
+msgid "Build complete"
+msgstr "Construcție completa"
+
+msgid "Linux %(version)s has been compiled and installed successfully."
+msgstr "Linux %(version)s a fost compilat și instalat cu succès."
+
+msgid "Build error"
+msgstr "Eroare de construcție"
+
+msgid "Compilation of Linux %(version)s has failed."
+msgstr "Compilarea Linux %(version)s a eșuat."
+
+msgid "Reboot required"
+msgstr "Repornire necesară"
+
+msgid "Reboot the system to use the new kernel."
+msgstr "Reporniți sistemul pentru a utiliza noul nucleu."
+
+msgid "Refresh versions (F5)"
+msgstr "Actualizează versiunile (F5)"
+
+msgid "Clean build files"
+msgstr "Curăță fișierele de construcție"
+
+msgid "About"
+msgstr "Despre"
+
+msgid "Quit (Ctrl+Q)"
+msgstr "Ieșire (Ctrl+Q)"
+
+msgid "A graphical interface for downloading, compiling and installing the Linux kernel with optimized profiles."
+msgstr "O interfață grafică pentru descărcarea, compilarea și instalarea nucleului Linux cu profiluri optimizate."
+
+msgid "Clean build files?"
+msgstr "Curățați fișierele de construcție?"
+
+msgid "All temporary files in ~/kernel_build will be deleted.\nThis will free up disk space."
+msgstr "Toate fișierele temporare din ~/kernel_build vor fi șterse.\nAcest lucru va elibera spațiu pe disc."
+
+msgid "Build files deleted."
+msgstr "Fișierele de construcție au fost șterse."
+
+msgid "Error cleaning files."
+msgstr "Eroare la curățarea fișierelor."
+
 msgid "Error"
-msgstr ""
+msgstr "Eroare"
 
-#: kernel_installer_gui/app/main_window.py:421
-#, python-format
-msgid "Result: %s"
-msgstr "Rezultat: %s"
+msgid "Unsupported distribution"
+msgstr "Distribuție neacceptată"
+
+msgid "%(distro)s is not officially supported. The program might not work correctly."
+msgstr "%(distro)s nu este acceptat oficial. Programul s-ar putea să nu funcționeze corect."
+
+msgid "Please select a kernel version."
+msgstr "Vă rugăm să selectați o versiune de nucleu."
+
+msgid "Install kernel?"
+msgstr "Instalați nucleul?"
+
+msgid "You are about to download, compile and install:\n\n• Version: Linux %(version)s\n• Profile: %(profile)s\n\nThis process may take several hours."
+msgstr "Sunteți pe cale să descărcați, să compilați și să instalați:\n\n• Versiune: Linux %(version)s\n• Profil: %(profile)s\n\nAcest proces poate dura câteva ore."
+
+msgid "Unknown"
+msgstr "Necunoscut"
 
